# ai-ugc-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
remotion/: UgcVideo.tsx  index.tsx  remotion.config.ts  tsconfig.json
scripts/: add_bgm.sh  build_scripts_15.py  gen_actor.py  regen_avatars.py  render_fal_only.py  render_omnihuman.py  render_v10_pexels.py  render_v11_remotion.py  render_v15_india.py  render_v17_heygen_broll.py  render_v18_video_agent.py  render_v2.py  render_v6.py  render_v7_bilingual.py  render_v8_scenes.py  render_v9_broll_only.py  sync-to-pkg.sh
src/ugc/: __init__.py  config.py  pipeline.py
src/ugc/ad_platforms/: __init__.py
src/ugc/briefs/: example.yaml
src/ugc/compose/: __init__.py  composition_template.html.j2
src/ugc/integrations/: __init__.py  heygen.py  hyperframes.py  mirage.py
src/ugc/producer/: __init__.py
src/ugc/scenes/: __init__.py
src/ugc/scripts/: __init__.py  brief_loader.py  prompt_builder.py
src/ugc/variants/: __init__.py
tests/: test_compose.py  test_smoke.py  test_variants.py
